# SplatCad-Backend

./: .example.env  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
entity/: Cargo.toml
entity/src/: commits.rs  files.rs  mod.rs  prelude.rs  projects.rs  user_projects.rs  users.rs  versions.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_start.rs  m20220810_230432_seed.rs
src/: errors.rs  jwt.rs  main.rs  pool.rs
src/guards/: jwt.rs
src/routes/: commits.rs  debug.rs  files.rs  mod.rs  project.rs  versions.rs
src/tests/: basic_rocket_tests.rs  mod.rs
