[package]
name = "splat_cad_backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity"]

[dependencies]
rocket = "0.5.0-rc.2"
sea-orm = { version = "^0.9.1", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
entity = { path = "entity" }
migration = { path = "migration" }
async-trait = { version = "0.1" }
serde = {version = "1.0", features = ["derive"] }
serde_json = { version = "^1" }
jsonwebtoken = "8"
once_cell = "1.13"

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"